# Aicodequest

./: LICENSE  README.md  package-lock.json
client/: index.html  package-lock.json  package.json
client/src/: App.jsx  main.jsx  monaco-config.js
client/src/Components/: GameNavbar.jsx  LeaderBoard.jsx  Navbar.jsx
client/src/Pages/: CodeEditor.jsx  Home.jsx  Login.jsx  Rules.jsx
client/src/styles/: editor.css  home.css  leaderboard.css  login.css  navbar.css
client/src/utils/: time.js
server/: app.py  pyproject.toml  requirements.txt
server/ai/: AiModule.py
server/config/: constants.py
server/db/: mongo.py
server/game/: scorer.py  state.py  validator.py
server/models/: session.py
server/piston/: PistonModule.py
server/questions/A1/: 1.txt  2.txt
server/questions/A2/: 1.txt  2.txt
server/questions/A3/: 1.txt  2.txt
server/questions/A4/: 1.txt  2.txt  3.txt  4.txt
server/routes/: get_code.py  get_results.py  start_game.py  submit_turn.py
server/scale/: groqQueue.py
server/tests/A1/: 1.py  2.py
server/tests/A2/: 1.py  2.py
server/tests/A3/: 1.py  2.py
server/tests/A4/: 1.py  2.py  3.py  4.py
